test/Test79.result
Semantic errors: 
test/Test79.jrag:3 Return type for NTA must be an AST node
Error: Failed to generate java files from JastAdd specification
